# Bidirectional-Path-Tracing

./: CMakeLists.txt  README.md  tinyrender.sln  tinyrender.vcxproj  tinyrender.vcxproj.filters
data/: config.json
data/a5/bonus_bdpt/mesh/: cbox.mtl
data/a5/bonus_bdpt/tinyrender/: 2_bounec_render.exr  cbox_bdpt.exr  cbox_bdpt.toml  cbox_bdpt_128spp_rr1_1244s.exr  cbox_bdpt_256spp_rr2_1172s.exr  cbox_bdpt_256spp_rr2_vis2_990s.exr  cbox_bdpt_256spp_rr3_vis2_1137s.exr  cbox_bdpt_bugged_emitter.exr  cbox_bdpt_direct_512.exr  cbox_bdpt_final.exr  cbox_bdpt_path.exr  cbox_bdpt_path.toml  cbox_bdpt_path_debug.exr
data/a5/cbox/mesh/: cbox.mtl  cbox_low.mtl  cbox_mirror.mtl
data/a5/cbox/tinyrender/: cbox_bdpt_glass.toml  cbox_bdpt_glass_512_rr.exr  cbox_bdpt_glass_5depth.exr  cbox_bdpt_glass_6depth.exr  cbox_bdpt_glass_6depth_2048spp.exr  cbox_bdpt_glass_6depth_largerlight.exr  cbox_bdpt_glass_7depth.exr  cbox_bdpt_glass_8depth.exr  cbox_bdpt_mirror.exr
src/: main.cpp
src/bsdfs/: diffuse.h  glass.h  microfacet.h  mixture.h  perfectmirror.h  phong.h
src/core/: accel.h  camera.h  core.h  integrator.cpp  integrator.h  math.h  parallelfor.h  platform.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  utils.h
src/integrators/: ao.h  bdpt.h  direct.h  normal.h  path.h  ro.h  simple.h
src/renderpasses/: gi.h  normal.h  simple.h  ssao.h
src/shaders/: emitter.fs  geometry.fs  geometry.vs  gi.fs  gi.vs  normal.fs  normal.vs  srgb.fs  ssao.fs
x64/Release/tinyrender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  tinyrender.lastbuildstate
